-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.5.0
-
2f5d8a629 (dev), 8ca9fd65f (6.5)
import QtQuick import QtQuick.Controls ApplicationWindow { id: root width: 640 height: 480 visible: true Button { text: "Button" flat: true Material.background: "red" } }
Broken in https://codereview.qt-project.org/c/qt/qtdeclarative/+/440892.
| For Gerrit Dashboard: QTBUG-113474 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 476573,3 | Material: respect background color of flat buttons | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 476843,1 | Material: respect background color of flat buttons | 6.5.1 | qt/qtdeclarative | Status: ABANDONED | 0 | 0 |
| 476844,4 | Material: respect background color of flat buttons | 6.5 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 476845,1 | Material: respect background color of flat buttons | tqtc/lts-6.2 | qt/tqtc-qtdeclarative | Status: ABANDONED | 0 | 0 |