Material: respect background color of flat buttons

Fixes: QTBUG-113474
Change-Id: I1fc39082e4cd1763bae56c512741502228b28397
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
(cherry picked from commit 2f5d8a629657ea5a69c7d1d1e86972f73049b011)
Reviewed-by: Oliver Eftevaag <oliver.eftevaag@qt.io>